--- a/paper/main.tex
+++ b/paper/main.tex
@@ -132,12 +132,12 @@ def}}}{=}}}
 \renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
 \renewcommand\pcthen{:}
 
-\title{Key Exchange to Key Schedule\\Reduction for TLS 1.3}
-\author{}\institute{}
-%\author{Chris Brzuska\inst{1}, Christoph Egger\inst{2}}
-%\institute{
-%			 Aalto University, Finland \and FAU Erlangen, Germany
-%}
+\title{SSPVerif}
+%\author{}\institute{}
+\author{Chris Brzuska\inst{1}, Christoph Egger\inst{2}, Jan Winkelmann\inst{3}}
+\institute{
+			 Aalto University, Finland \and IRIF, CNRS Paris, France \and Free spirit
+}
 
 \let\oldprocedure\procedure
 \renewcommand\procedure[2][]{\oldprocedure[#1,codesize=\small{}]{\small#2}}
