--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,7 +1,5 @@
 \section{Introduction}
-Halevi's dream-vision of computer-aided reduction proofs in cryptography~\cite{Halevi} suggests that creativity is reserved for humans, while algorithms are in charge of tedious steps which confirm the soundness of a reduction and only use standard techniques. An important success on the path for computer-aided cryptography is that computer-aided \emph{attack-finding} has established itself firmly as a standard tool for protocol development. Most importantly, Tamarin~\cite{X} has been used to improve ...~\cite{X}, ...~\cite{X} and ...~\cite{X}, and, in particular, is used across the community also without involving an author of the original tool, see, e.g.~\cite{X}.
-
-In turn, computer-aided \emph{reduction proofs} are only studied by a small sub-community. 
+Halevi's dream-vision of computer-aided reduction proofs in cryptography~\cite{Halevi} suggests that creativity is reserved for humans, while algorithms are in charge of tedious steps which confirm the soundness of a reduction and only use standard techniques. An important success on the path for computer-aided cryptography is that computer-aided \emph{attack-finding} has established itself firmly as a standard tool for protocol development. Most importantly, Tamarin~\cite{X} has been used to improve ...~\cite{X}, ...~\cite{X} and ...~\cite{X}, and, in particular, is used across the community also without involving an author of the original tool, see, e.g.~\cite{X}. However, computer-aided \emph{reduction proofs} have not yet joined the quest for support
 
 ==== OLD ====
 
